<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="com.junjc9.funu.ui.activity.setting.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_setting_general"
        android:title="@string/pref_header_general"
        android:summary="@string/pref_header_general_summary" />

    <header
        android:fragment="com.junjc9.funu.ui.activity.setting.SettingsActivity$ThemePreferenceFragment"
        android:icon="@drawable/ic_setting_theme_choose"
        android:title="@string/pref_header_themes"
        android:summary="@string/pref_header_themes_summary"/>

    <header
        android:fragment="com.junjc9.funu.ui.activity.setting.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_setting_notifications"
        android:title="@string/pref_header_notifications"
        android:summary="@string/pref_header_notifications_summary" />

    <header
        android:fragment="com.junjc9.funu.ui.activity.setting.SettingsActivity$DataSyncPreferenceFragment"
        android:icon="@drawable/ic_setting_sync"
        android:title="@string/pref_header_data_sync"
        android:summary="@string/pref_header_data_sync_summary"/>

    <header
        android:fragment="com.junjc9.funu.ui.activity.setting.SettingsActivity$CustomizationPreferenceFragment"
        android:icon="@drawable/ic_setting_custom"
        android:title="@string/pref_header_customization"
        android:summary="@string/pref_header_customization_summary"/>

    <header
        android:fragment="com.junjc9.funu.ui.activity.setting.SettingsActivity$LanguageChoosePreferenceFragment"
        android:icon="@drawable/ic_setting_language"
        android:title="@string/pref_header_languages"
        android:summary="@string/pref_header_languages_summary"/>

    <header
        android:fragment="com.junjc9.funu.ui.activity.setting.SettingsActivity$HelpFeedbackPreferenceFragment"
        android:icon="@drawable/ic_setting_help_feedback"
        android:title="@string/pref_header_help_feedback"
        android:summary="@string/pref_header_help_feedback_summary"/>

</preference-headers>
