<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="true"
        android:key="help_and_feedback"
        android:icon="@drawable/ic_priority"
        android:title="@string/pref_title_all_problems"
        android:summary="@string/pref_description_social_recommendations"
        />

    <EditTextPreference
        android:capitalize="sentences"
        android:defaultValue="@string/pref_default_display_name"
        android:inputType="textCapSentences"
        android:key="report bug"
        android:maxLines="4"
        android:icon="@drawable/ic_bug_report"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_title_report_bug" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="join experience plan"
        android:icon="@drawable/ic_group"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_join_user_experience_plan"/>



</PreferenceScreen>