<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <SwitchPreference
        android:defaultValue="true"
        android:key="customization"
        android:icon="@drawable/ic_round"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_squarish_avatars" />


    <CheckBoxPreference
        android:defaultValue="true"
        android:key="colorless_navbar"
        android:icon="@drawable/ic_bubble_chart"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_colorless_navbar"
        />

    <SwitchPreference
        android:defaultValue="true"
        android:key="list_animation"
        android:icon="@drawable/ic_gesture"
        android:summary="@string/pref_description_social_recommendations"
        android:title="@string/pref_title_list_animation"/>

</PreferenceScreen>